--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,13 +1,13 @@
 /******* Customized Bootstrap ********/
 
-$primary: #15B9D9;
+$primary: #80f532;
 $secondary: #EFA286;
 $light: #FAF9FB;
 $dark: #252525;
 
-$font-family-base: 'Open Sans', sans-serif;
+$font-family-base: 'Albula Pro Bold', sans-serif;
 
-$headings-font-family: 'Playfair Display', serif;
+$headings-font-family: 'Albula Pro Bold', sans-serif;
 
 $body-color: #8D8D8D;
 
