--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -20,7 +20,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #15B9D9;
+  --bs-primary: #80f532;
   --bs-secondary: #EFA286;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -47,7 +47,7 @@
 
 body {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Albula Pro Bold", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -72,7 +72,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Playfair Display", serif;
+  font-family: "Albula Pro Bold", sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #252525;
@@ -205,11 +205,11 @@ sup {
 }
 
 a {
-  color: #15B9D9;
+  color: #80f532;
   text-decoration: none;
 }
 a:hover {
-  color: #1194ae;
+  color: #66c428;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -1767,15 +1767,15 @@ progress {
 }
 
 .table-primary {
-  --bs-table-bg: #d0f1f7;
-  --bs-table-striped-bg: #c6e5eb;
+  --bs-table-bg: #e6fdd6;
+  --bs-table-striped-bg: #dbf0cb;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bbd9de;
+  --bs-table-active-bg: #cfe4c1;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c0dfe4;
+  --bs-table-hover-bg: #d5eac6;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #bbd9de;
+  border-color: #cfe4c1;
 }
 
 .table-secondary {
@@ -1961,9 +1961,9 @@ progress {
 .form-control:focus {
   color: #8D8D8D;
   background-color: #fff;
-  border-color: #8adcec;
+  border-color: #c0fa99;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2134,9 +2134,9 @@ textarea.form-control-lg {
           appearance: none;
 }
 .form-select:focus {
-  border-color: #8adcec;
+  border-color: #c0fa99;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2201,13 +2201,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #8adcec;
+  border-color: #c0fa99;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .form-check-input:checked {
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2216,8 +2216,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2246,7 +2246,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%238adcec'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23c0fa99'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2282,10 +2282,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2294,7 +2294,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #15B9D9;
+  background-color: #80f532;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2309,7 +2309,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #b9eaf4;
+  background-color: #d9fcc2;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2323,7 +2323,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #15B9D9;
+  background-color: #80f532;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2338,7 +2338,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #b9eaf4;
+  background-color: #d9fcc2;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2696,7 +2696,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -2705,32 +2705,32 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .btn-primary:hover {
   color: #000;
-  background-color: #38c4df;
-  border-color: #2cc0dd;
+  background-color: #93f751;
+  border-color: #8df647;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #000;
-  background-color: #38c4df;
-  border-color: #2cc0dd;
-  box-shadow: 0 0 0 0.25rem rgba(18, 157, 184, 0.5);
+  background-color: #93f751;
+  border-color: #8df647;
+  box-shadow: 0 0 0 0.25rem rgba(109, 208, 43, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #000;
-  background-color: #44c7e1;
-  border-color: #2cc0dd;
+  background-color: #99f75b;
+  border-color: #8df647;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(18, 157, 184, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(109, 208, 43, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #000;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 
 .btn-secondary {
@@ -2944,27 +2944,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #15B9D9;
-  border-color: #15B9D9;
+  color: #80f532;
+  border-color: #80f532;
 }
 .btn-outline-primary:hover {
   color: #000;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #000;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #15B9D9;
+  color: #80f532;
   background-color: transparent;
 }
 
@@ -3145,11 +3145,11 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #15B9D9;
+  color: #80f532;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #1194ae;
+  color: #66c428;
 }
 .btn-link:disabled, .btn-link.disabled {
   color: #6c757d;
@@ -3438,7 +3438,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #15B9D9;
+  background-color: #80f532;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3479,7 +3479,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #15B9D9;
+  background-color: #80f532;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3601,7 +3601,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #15B9D9;
+  color: #80f532;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3610,7 +3610,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #1194ae;
+  color: #66c428;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -3657,7 +3657,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #15B9D9;
+  background-color: #80f532;
 }
 
 .nav-fill > .nav-link,
@@ -4183,12 +4183,12 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: #13a7c3;
-  background-color: #e8f8fb;
+  color: #73dd2d;
+  background-color: #f2feeb;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2313a7c3'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2373dd2d'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
@@ -4212,9 +4212,9 @@ textarea.form-control-lg {
 }
 .accordion-button:focus {
   z-index: 3;
-  border-color: #8adcec;
+  border-color: #c0fa99;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 
 .accordion-header {
@@ -4301,7 +4301,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #15B9D9;
+  color: #80f532;
   background-color: #fff;
   border: 1px solid #dee2e6;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4313,16 +4313,16 @@ textarea.form-control-lg {
 }
 .page-link:hover {
   z-index: 2;
-  color: #1194ae;
+  color: #66c428;
   background-color: #e9ecef;
   border-color: #dee2e6;
 }
 .page-link:focus {
   z-index: 3;
-  color: #1194ae;
+  color: #66c428;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -4331,8 +4331,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4429,12 +4429,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: #0d6f82;
-  background-color: #d0f1f7;
-  border-color: #b9eaf4;
+  color: #336214;
+  background-color: #e6fdd6;
+  border-color: #d9fcc2;
 }
 .alert-primary .alert-link {
-  color: #0a5968;
+  color: #294e10;
 }
 
 .alert-secondary {
@@ -4522,7 +4522,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #15B9D9;
+  background-color: #80f532;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4602,8 +4602,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #15B9D9;
-  border-color: #15B9D9;
+  background-color: #80f532;
+  border-color: #80f532;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -4767,17 +4767,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #0d6f82;
-  background-color: #d0f1f7;
+  color: #336214;
+  background-color: #e6fdd6;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #0d6f82;
-  background-color: #bbd9de;
+  color: #336214;
+  background-color: #cfe4c1;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #0d6f82;
-  border-color: #0d6f82;
+  background-color: #336214;
+  border-color: #336214;
 }
 
 .list-group-item-secondary {
@@ -4896,7 +4896,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(21, 185, 217, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(128, 245, 50, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -5251,7 +5251,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Albula Pro Bold", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5353,7 +5353,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Albula Pro Bold", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5823,10 +5823,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #15B9D9;
+  color: #80f532;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #44c7e1;
+  color: #99f75b;
 }
 
 .link-secondary {
@@ -6226,7 +6226,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #15B9D9 !important;
+  border-color: #80f532 !important;
 }
 
 .border-secondary {
@@ -7205,7 +7205,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #15B9D9 !important;
+  color: #80f532 !important;
 }
 
 .text-secondary {
@@ -7261,7 +7261,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #15B9D9 !important;
+  background-color: #80f532 !important;
 }
 
 .bg-secondary {
