--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #80f532;
+$primary: #F39200;
 $secondary: #EFA286;
 $light: #FAF9FB;
 $dark: #252525;
