--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,7 @@
 
 }
 
+
 .service .service-item .service-content::before {
     width: 100%;
     height: 8px;
@@ -518,13 +519,13 @@
     left: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background: rgba(21, 185, 217, .5);
+    background: rgba(45, 45, 45, 0.5);
     transition: 0.5s;
     z-index: 3;
 }
 
 .service .service-item:hover .service-content::before {
-    background: rgba(21, 185, 217, .5);
+    background: rgba(45, 45, 45, 0.2);
     height: 100%;
 }
 
@@ -539,8 +540,26 @@
     z-index: 9;
 }
 .service .service-item:hover .service-content .service-content-inner h5 {
-    color: var(--bs-secondary);
+    /*color: var(--bs-secondary);*/
+    color: #F39200;
 }
+
+.service-item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.service-content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.service-content-inner {
+    flex-grow: 1;
+}
+
 
 /*** Service End ***/
 
@@ -796,6 +815,7 @@
 
 .team .team-item .team-content h5 {
     color: var(--bs-secondary);
+    /*color: var(--h5-service-primary);*/
     transition: 0.5s;
 }
 
@@ -1068,7 +1088,7 @@
 
 /*** Contact Start ***/
 .contact {
-    background: linear-gradient(rgba(21, 185, 217, 0.9), rgba(21, 185, 217, 0.9)), url(../img/carousel-1.jpg);
+    
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1082,7 +1102,7 @@
 
 .contact .contact-form .btn.btn-light:hover {
     box-shadow: inset 600px 0 0 0 var(--bs-primary) !important;
-    color: var(--bs-white) !important;
+    color: var(--bs-primary) !important;
 }
 
 .contact .contact-form .form-floating input,
