Cambios de imagenes y texto

--- a/css/style.css
+++ b/css/style.css
@@ -1110,6 +1110,9 @@
 .contact .contact-form .form-floating label {
     color: var(--bs-light);
 }
+.contact-icon-color{
+    color: var(--bs-primary);
+}
 
 
 
