--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@
     .header-carousel .header-carousel-item .carousel-caption .carousel-caption-content {
         width: 95% !important;
     }
+
+    .small-text{
+        font-size: 1em;
+    }
  
 }
 
